# dotfiles

./: .envrc  .gitattributes  .gitignore  .nixd.json  .nixd.nix  .sops.yaml  README.md  README.org  _README.md  bootstrap  colmena.nix  default.nix  deploy.nix  flake-module.nix  flake.nix  justfile  loki.json  repl.nix  treefmt.toml
.builds/: check.yml
.reuse/: dep5
config/emacs/: e  vterm.zsh
config/xmobar/: .gitignore  cabal.project  flake.nix  license  readme.md  xmobar-config.cabal
config/xmobar/icons/: gen-load-icons.sh
config/xmobar/icons/dark/: load_0.xpm  load_1.xpm  load_2.xpm  load_3.xpm  load_5.xpm  load_6.xpm  load_7.xpm
config/xmobar/icons/light/: load_0.xpm  load_1.xpm  load_3.xpm  load_4.xpm  load_5.xpm  load_6.xpm  load_7.xpm
config/xmobar/src/: Bottom.hs  Sway.hs  Top.hs  TopC.hs  TopS.hs
config/xmobar/src/lib/: Bottom.hs  Config.hs  GMPDP.hs  Monitors.hs  Music.hs
config/xmonad/: cabal.project  develop.nix  flake.nix  xmonad-config.cabal
config/xmonad/icons/dark/: load_4.xpm  load_8.xpm
config/xmonad/icons/light/: load_2.xpm  load_8.xpm
config/xmonad/src/: xmonad.hs
config/xmonad/src/lib/: Config.hs  GridSelection.hs
darwin/: default.nix
darwin/machines/: MacBook-Pro.nix  franklin.nix
darwin/modules/: amphetamine.nix  hammerspoon.nix  input-leap.nix  nix-key.nix  nix-serve.nix  tailscale.nix  terminfo.nix
darwin/profiles/: development.nix  distributed-build.nix  emacs.nix  podman.nix  postgres.nix  pulseaudio.nix  system-defaults.nix  tailscale.nix
darwin/roles/: default.nix
docs/: README.org
flake-modules/: collective.nix  darwin.nix  default.nix  deploy.nix  linux.nix  overlays.nix
home/: default.nix
home/modules/: buku.nix  fish-custom.nix  gpg-agent.nix  iterm2.nix  mbsync-darwin.nix  promnesia.nix  skhd.nix  syncthing.nix  theme.nix
home/profiles/: 0001-Buffer-process-output-on-a-separate-thread.patch  apple-music.nix  aws.nix  barrier.nix  dhall.nix  direnv.nix  emacs.nix  foot.nix  generic-linux.nix  git.nix  gpg-unlock.nix  gpg.nix  gstreamer.nix  jetbrains.nix  ledger.nix  mail.nix  media.nix  misc.nix  mpv.nix  newsboat.nix  nix-dram.nix  nnn.nix  nodejs.nix  obs-studio.nix  ops.nix  python.nix  security-tools.nix  spotify.nix  ssh.nix  standalone.nix  sync.nix  tealdeer.nix  tmux.nix  vim.nix  work.nix  yubikey.nix  zotero.nix
home/roles/: default.nix
lib/: color.sh  default.nix  overlay-null-protector.nix  utils.sh
lib/compat/: default.nix
modules/: fup-options.nix  hm-shared-modules.nix  nix-config-defaults.nix  nixos-vm.nix
nix/: ci.nix  flake-module.nix
nixos/: default.nix
profiles/: flox.nix  hercules-ci-agent.nix  nix-substituter.nix  secrets.nix
secrets/: age.pub  attic-config.toml.age  authorized-keys.nix  dotfield-readme-update-access-token.txt.age  fastmail.txt.age  global.secrets.yaml  gpg--fingerprint  gpg-0x77CB2390C53B4E5B.txt  minecraft-rcon-password.txt.age  openvpn-auth-file.txt.age  secrets.nix  ssh-macgpg.pub  ssh-yubikey.pub  tailscale-luks-setup.state.age
shell/: default.nix  dotfield.nix  dotfiles.nix
(+243 files in other folders)
