name:           xmobar-config
version:        0.1
description:    xmobar configs
author:         jao
maintainer:     jao@gnu.org
copyright:      2018, 2019, 2020, 2022 Jose A Ortega Ruiz
license:        GPL-3
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    readme.md

library
  hs-source-dirs: src/lib
  exposed-modules: Config, Monitors, Bottom, Music, GMPDP
  build-depends: base >=4.7 && <5, async > 2.2, stm >= 2.5,
                 aeson, text, bytestring, http-conduit,
                 hinotify, xmobar
  other-modules: Paths_xmobar_config
  default-language: Haskell2010

executable xmobar-top
  main-is: Top.hs
  hs-source-dirs: src
  ghc-options: -rtsopts -with-rtsopts=-V0 -threaded
  build-depends: base, xmobar, xmobar-config
  default-language: Haskell2010

executable xmobar-top-s
  main-is: TopS.hs
  hs-source-dirs: src
  ghc-options: -rtsopts -with-rtsopts=-V0 -threaded
  build-depends: base, xmobar, xmobar-config
  default-language: Haskell2010

executable xmobar-bottom
  main-is: Bottom.hs
  hs-source-dirs: src
  ghc-options: -rtsopts -with-rtsopts=-V0  -threaded
  build-depends: base, xmobar, xmobar-config
  default-language: Haskell2010

-- executable xmobar-sway
--   main-is: Sway.hs
--   hs-source-dirs: src
--   ghc-options: -rtsopts -with-rtsopts=-V0 -threaded
--   build-depends: base, xmobar, xmobar-config
--   default-language: Haskell2010
