cabal-version:  3.4
name:           xmonad-config
version:        0.1
description:    xmonad configs
author:         Connor Feeley
maintainer:     cfeeley@cfeeley.org
copyright:      2022 Connor Feeley
license:        MIT
build-type:     Simple

library
  hs-source-dirs: src/lib
  exposed-modules: Config, GridSelection
  build-depends: base >=4.7 && <5, async > 2.2, stm >= 2.5,
                 aeson, text, bytestring, http-conduit,
                 hinotify, xmobar, xmonad, xmonad-contrib,
                 X11>=1.8, containers
  other-modules: Paths_xmonad_config
  default-language: Haskell2010

executable xmonad
  build-depends:       aeson>=0.11.2.1
                     , X11>=1.8
                     , base >=4.7
                     , bytestring>=0.10.8.1
                     , containers>=0.5.7.1
                     , directory>=1.2.6.2
                     , filepath>=1.4.1.0
                     , hostname>=1.0
                     , multimap>=1.2.1
                     , process>=1.4.3.0
                     , safe
                     , split
                     , xdg-desktop-entry
                     , transformers>=0.5.2.0
                     , tuple >= 0.3.0.2
                     , utf8-string
                     , xmonad-contrib
                     , xmonad-config
                     , xmonad


  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N

  main-is:            xmonad.hs
  hs-source-dirs:     src
  default-language:   Haskell2010
